abutcher-p1/antlr-generated/edu/wvu/mix/abutcher/CS210_V1Parser.java
// $ANTLR 3.2 Sep 23, 2009 12:02:23 /Users/abutcher/Documents/workspace/abutcher-p1/src/edu/wvu/mix/abutcher/CS210_V1.g 2010-09-08 10:23:46

package edu.wvu.mix.abutcher;
  import edu.wvu.mix.abutcher.Statement.*;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

public class CS210_V1Parser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "EL", "STRING_LITERAL", "TYPE", "COMMA", "EQUALS", "INTEGER", "DATE", "REAL", "BOOLEAN", "NULL", "IDENT", "ADDOP", "MULTOP", "AND", "OR", "RELOP", "DIGIT", "LETTER", "SPECCHAR", "PERIOD", "WS", "COMMENT", "'PRINT'", "'DICTIONARY'", "'EXIT'", "'READ'", "'LOAD'", "'BACKUP'", "'TO'", "'DEFINE'", "'TABLE'", "'HAVING'", "'FIELDS'", "'('", "')'", "'RENAME'", "'DROP'", "'INDEX'", "'ON'", "'DELETE'", "'WHERE'", "'INSERT'", "'INTO'", "'UPDATE'", "'SET'", "'SELECT'", "'PROJECT'", "'OVER'", "'JOIN'", "'INTERSECT'", "'UNION'", "'MINUS'", "'not'"
    };
    public static final int T__29=29;
    public static final int T__28=28;
    public static final int T__27=27;
    public static final int T__26=26;
    public static final int LETTER=21;
    public static final int SPECCHAR=22;
    public static final int EQUALS=8;
    public static final int ADDOP=15;
    public static final int AND=17;
    public static final int EOF=-1;
    public static final int TYPE=6;
    public static final int T__55=55;
    public static final int T__56=56;
    public static final int T__51=51;
    public static final int STRING_LITERAL=5;
    public static final int BOOLEAN=12;
    public static final int T__52=52;
    public static final int T__53=53;
    public static final int T__54=54;
    public static final int MULTOP=16;
    public static final int COMMA=7;
    public static final int IDENT=14;
    public static final int DIGIT=20;
    public static final int COMMENT=25;
    public static final int T__50=50;
    public static final int EL=4;
    public static final int T__42=42;
    public static final int INTEGER=9;
    public static final int T__43=43;
    public static final int T__40=40;
    public static final int T__41=41;
    public static final int T__46=46;
    public static final int T__47=47;
    public static final int T__44=44;
    public static final int T__45=45;
    public static final int PERIOD=23;
    public static final int T__48=48;
    public static final int T__49=49;
    public static final int NULL=13;
    public static final int T__30=30;
    public static final int REAL=11;
    public static final int T__31=31;
    public static final int T__32=32;
    public static final int WS=24;
    public static final int T__33=33;
    public static final int T__34=34;
    public static final int T__35=35;
    public static final int T__36=36;
    public static final int T__37=37;
    public static final int T__38=38;
    public static final int T__39=39;
    public static final int OR=18;
    public static final int DATE=10;
    public static final int RELOP=19;

    // delegates
    // delegators


        public CS210_V1Parser(TokenStream input) {
            this(input, new RecognizerSharedState());
        }
        public CS210_V1Parser(TokenStream input, RecognizerSharedState state) {
            super(input, state);
             
        }
        

    public String[] getTokenNames() { return CS210_V1Parser.tokenNames; }
    public String getGrammarFileName() { return "/Users/abutcher/Documents/workspace/abutcher-p1/src/edu/wvu/mix/abutcher/CS210_V1.g"; }



    // $ANTLR start "rule"
    // /Users/abutcher/Documents/workspace/abutcher-p1/src/edu/wvu/mix/abutcher/CS210_V1.g:18:1: rule returns [Statement st] : ( admin_statement EL | ddl_statement EL | dml_statement EL | query_statement EL )+ ;
    public final Statement rule() throws RecognitionException {
        Statement st = null;

        try {
            // /Users/abutcher/Documents/workspace/abutcher-p1/src/edu/wvu/mix/abutcher/CS210_V1.g:19:3: ( ( admin_statement EL | ddl_statement EL | dml_statement EL | query_statement EL )+ )
            // /Users/abutcher/Documents/workspace/abutcher-p1/src/edu/wvu/mix/abutcher/CS210_V1.g:20:3: ( admin_statement EL | ddl_statement EL | dml_statement EL | query_statement EL )+
            {
            // /Users/abutcher/Documents/workspace/abutcher-p1/src/edu/wvu/mix/abutcher/CS210_V1.g:20:3: ( admin_statement EL | ddl_statement EL | dml_statement EL | query_statement EL )+
            int cnt1=0;
            loop1:
            do {
                int alt1=5;
                switch ( input.LA(1) ) {
                case 26:
                case 28:
                case 29:
                case 30:
                case 31:
                    {
                    alt1=1;
                    }
                    break;
                case 33:
                case 39:
                case 40:
                    {
                    alt1=2;
                    }
                    break;
                case 43:
                case 45:
                case 47:
                    {
                    alt1=3;
                    }
                    break;
                case 49:
                case 50:
                case 52:
                case 53:
                case 54:
                case 55:
                    {
                    alt1=4;
                    }
                    break;

                }

                switch (alt1) {
            	case 1 :
            	    // /Users/abutcher/Documents/workspace/abutcher-p1/src/edu/wvu/mix/abutcher/CS210_V1.g:21:5: admin_statement EL
            	    {
            	    pushFollow(FOLLOW_admin_statement_in_rule55);
            	    admin_statement();

            	    state._fsp--;

            	    match(input,EL,FOLLOW_EL_in_rule57); 

            	                           st = new OtherStatement();
            	                          

            	    }
            	    break;
            	case 2 :
            	    // /Users/abutcher/Documents/workspace/abutcher-p1/src/edu/wvu/mix/abutcher/CS210_V1.g:25:7: ddl_statement EL
            	    {
            	    pushFollow(FOLLOW_ddl_statement_in_rule90);
            	    ddl_statement();

            	    state._fsp--;

            	    match(input,EL,FOLLOW_EL_in_rule92); 

            	                           st = new OtherStatement();
            	                          

            	    }
            	    break;
            	case 3 :
            	    // /Users/abutcher/Documents/workspace/abutcher-p1/src/edu/wvu/mix/abutcher/CS210_V1.g:29:7: dml_statement EL
            	    {
            	    pushFollow(FOLLOW_dml_statement_in_rule125);
            	    dml_statement();

            	    state._fsp--;

            	    match(input,EL,FOLLOW_EL_in_rule127); 

            	                           st = new OtherStatement();
            	                          

            	    }
            	    break;
            	case 4 :
            	    // /Users/abutcher/Documents/workspace/abutcher-p1/src/edu/wvu/mix/abutcher/CS210_V1.g:33:7: query_statement EL
            	    {
            	    pushFollow(FOLLOW_query_statement_in_rule160);
            	    query_statement();

            	    state._fsp--;

            	    match(input,EL,FOLLOW_EL_in_rule162); 

            	                             st = new SelectStatement();
            	                            

            	    }
            	    break;

            	default :
            	    if ( cnt1 >= 1 ) break loop1;
                        EarlyExitException eee =
                            new EarlyExitException(1, input);
                        throw eee;
                }
                cnt1++;
            } while (true);


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return st;
    }
    // $ANTLR end "rule"


    // $ANTLR start "admin_statement"
    // /Users/abutcher/Documents/workspace/abutcher-p1/src/edu/wvu/mix/abutcher/CS210_V1.g:42:1: admin_statement : ( exit | print | read | load | backup );
    public final void admin_statement() throws RecognitionException {
        try {
            // /Users/abutcher/Documents/workspace/abutcher-p1/src/edu/wvu/mix/abutcher/CS210_V1.g:43:3: ( exit | print | read | load | backup )
            int alt2=5;
            switch ( input.LA(1) ) {
            case 28:
                {
                alt2=1;
                }
                break;
            case 26:
                {
                alt2=2;
                }
                break;
            case 29:
                {
                alt2=3;
                }
                break;
            case 30:
                {
                alt2=4;
                }
                break;
            case 31:
                {
                alt2=5;
                }
                break;
            default:
                NoViableAltException nvae =
                    new NoViableAltException("", 2, 0, input);

                throw nvae;
            }

            switch (alt2) {
                case 1 :
                    // /Users/abutcher/Documents/workspace/abutcher-p1/src/edu/wvu/mix/abutcher/CS210_V1.g:44:3: exit
                    {
                    pushFollow(FOLLOW_exit_in_admin_statement211);
                    exit();

                    state._fsp--;


                    }
                    break;
                case 2 :
                    // /Users/abutcher/Documents/workspace/abutcher-p1/src/edu/wvu/mix/abutcher/CS210_V1.g:45:5: print
                    {
                    pushFollow(FOLLOW_print_in_admin_statement217);
                    print();

                    state._fsp--;


                    }
                    break;
                case 3 :
                    // /Users/abutcher/Documents/workspace/abutcher-p1/src/edu/wvu/mix/abutcher/CS210_V1.g:46:5: read
                    {
                    pushFollow(FOLLOW_read_in_admin_statement223);
                    read();

                    state._fsp--;


                    }
                    break;
                case 4 :
                    // /Users/abutcher/Documents/workspace/abutcher-p1/src/edu/wvu/mix/abutcher/CS210_V1.g:47:5: load
                    {
                    pushFollow(FOLLOW_load_in_admin_statement229);
                    load();

                    state._fsp--;


                    }
                    break;
                case 5 :
                    // /Users/abutcher/Documents/workspace/abutcher-p1/src/edu/wvu/mix/abutcher/CS210_V1.g:48:5: backup
                    {
                    pushFollow(FOLLOW_backup_in_admin_statement235);
                    backup();

                    state._fsp--;


                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "admin_statement"


    // $ANTLR start "print"
    // /Users/abutcher/Documents/workspace/abutcher-p1/src/edu/wvu/mix/abutcher/CS210_V1.g:51:1: print : ( 'PRINT' 'DICTIONARY' | 'PRINT' table_name );
    public final void print() throws RecognitionException {
        try {
            // /Users/abutcher/Documents/workspace/abutcher-p1/src/edu/wvu/mix/abutcher/CS210_V1.g:52:3: ( 'PRINT' 'DICTIONARY' | 'PRINT' table_name )
            int alt3=2;
            int LA3_0 = input.LA(1);

            if ( (LA3_0==26) ) {
                int LA3_1 = input.LA(2);

                if ( (LA3_1==27) ) {
                    alt3=1;
                }
                else if ( (LA3_1==IDENT) ) {
                    alt3=2;
                }
                else {
                    NoViableAltException nvae =
                        new NoViableAltException("", 3, 1, input);

                    throw nvae;
                }
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 3, 0, input);

                throw nvae;
            }
            switch (alt3) {
                case 1 :
                    // /Users/abutcher/Documents/workspace/abutcher-p1/src/edu/wvu/mix/abutcher/CS210_V1.g:53:3: 'PRINT' 'DICTIONARY'
                    {
                    match(input,26,FOLLOW_26_in_print250); 
                    match(input,27,FOLLOW_27_in_print252); 

                    }
                    break;
                case 2 :
                    // /Users/abutcher/Documents/workspace/abutcher-p1/src/edu/wvu/mix/abutcher/CS210_V1.g:54:5: 'PRINT' table_name
                    {
                    match(input,26,FOLLOW_26_in_print258); 
                    pushFollow(FOLLOW_table_name_in_print260);
                    table_name();

                    state._fsp--;


                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "print"


    // $ANTLR start "exit"
    // /Users/abutcher/Documents/workspace/abutcher-p1/src/edu/wvu/mix/abutcher/CS210_V1.g:57:1: exit : 'EXIT' ;
    public final void exit() throws RecognitionException {
        try {
            // /Users/abutcher/Documents/workspace/abutcher-p1/src/edu/wvu/mix/abutcher/CS210_V1.g:58:3: ( 'EXIT' )
            // /Users/abutcher/Documents/workspace/abutcher-p1/src/edu/wvu/mix/abutcher/CS210_V1.g:59:3: 'EXIT'
            {
            match(input,28,FOLLOW_28_in_exit275); 

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "exit"


    // $ANTLR start "read"
    // /Users/abutcher/Documents/workspace/abutcher-p1/src/edu/wvu/mix/abutcher/CS210_V1.g:62:1: read : 'READ' STRING_LITERAL ;
    public final void read() throws RecognitionException {
        try {
            // /Users/abutcher/Documents/workspace/abutcher-p1/src/edu/wvu/mix/abutcher/CS210_V1.g:63:3: ( 'READ' STRING_LITERAL )
            // /Users/abutcher/Documents/workspace/abutcher-p1/src/edu/wvu/mix/abutcher/CS210_V1.g:64:3: 'READ' STRING_LITERAL
            {
            match(input,29,FOLLOW_29_in_read290); 
            match(input,STRING_LITERAL,FOLLOW_STRING_LITERAL_in_read292); 

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "read"


    // $ANTLR start "load"
    // /Users/abutcher/Documents/workspace/abutcher-p1/src/edu/wvu/mix/abutcher/CS210_V1.g:67:1: load : 'LOAD' STRING_LITERAL ;
    public final void load() throws RecognitionException {
        try {
            // /Users/abutcher/Documents/workspace/abutcher-p1/src/edu/wvu/mix/abutcher/CS210_V1.g:68:3: ( 'LOAD' STRING_LITERAL )
            // /Users/abutcher/Documents/workspace/abutcher-p1/src/edu/wvu/mix/abutcher/CS210_V1.g:69:3: 'LOAD' STRING_LITERAL
            {
            match(input,30,FOLLOW_30_in_load307); 
            match(input,STRING_LITERAL,FOLLOW_STRING_LITERAL_in_load309); 

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "load"


    // $ANTLR start "backup"
    // /Users/abutcher/Documents/workspace/abutcher-p1/src/edu/wvu/mix/abutcher/CS210_V1.g:72:1: backup : 'BACKUP' 'TO' STRING_LITERAL ;
    public final void backup() throws RecognitionException {
        try {
            // /Users/abutcher/Documents/workspace/abutcher-p1/src/edu/wvu/mix/abutcher/CS210_V1.g:73:3: ( 'BACKUP' 'TO' STRING_LITERAL )
            // /Users/abutcher/Documents/workspace/abutcher-p1/src/edu/wvu/mix/abutcher/CS210_V1.g:74:3: 'BACKUP' 'TO' STRING_LITERAL
            {
            match(input,31,FOLLOW_31_in_backup324); 
            match(input,32,FOLLOW_32_in_backup326); 
            match(input,STRING_LITERAL,FOLLOW_STRING_LITERAL_in_backup328); 

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "backup"


    // $ANTLR start "ddl_statement"
    // /Users/abutcher/Documents/workspace/abutcher-p1/src/edu/wvu/mix/abutcher/CS210_V1.g:79:1: ddl_statement : ( define | rename | drop | define_index );
    public final void ddl_statement() throws RecognitionException {
        try {
            // /Users/abutcher/Documents/workspace/abutcher-p1/src/edu/wvu/mix/abutcher/CS210_V1.g:80:3: ( define | rename | drop | define_index )
            int alt4=4;
            switch ( input.LA(1) ) {
            case 33:
                {
                int LA4_1 = input.LA(2);

                if ( (LA4_1==34) ) {
                    alt4=1;
                }
                else if ( (LA4_1==41) ) {
                    alt4=4;
                }
                else {
                    NoViableAltException nvae =
                        new NoViableAltException("", 4, 1, input);

                    throw nvae;
                }
                }
                break;
            case 39:
                {
                alt4=2;
                }
                break;
            case 40:
                {
                alt4=3;
                }
                break;
            default:
                NoViableAltException nvae =
                    new NoViableAltException("", 4, 0, input);

                throw nvae;
            }

            switch (alt4) {
                case 1 :
                    // /Users/abutcher/Documents/workspace/abutcher-p1/src/edu/wvu/mix/abutcher/CS210_V1.g:81:3: define
                    {
                    pushFollow(FOLLOW_define_in_ddl_statement345);
                    define();

                    state._fsp--;


                    }
                    break;
                case 2 :
                    // /Users/abutcher/Documents/workspace/abutcher-p1/src/edu/wvu/mix/abutcher/CS210_V1.g:82:5: rename
                    {
                    pushFollow(FOLLOW_rename_in_ddl_statement351);
                    rename();

                    state._fsp--;


                    }
                    break;
                case 3 :
                    // /Users/abutcher/Documents/workspace/abutcher-p1/src/edu/wvu/mix/abutcher/CS210_V1.g:83:5: drop
                    {
                    pushFollow(FOLLOW_drop_in_ddl_statement357);
                    drop();

                    state._fsp--;


                    }
                    break;
                case 4 :
                    // /Users/abutcher/Documents/workspace/abutcher-p1/src/edu/wvu/mix/abutcher/CS210_V1.g:84:5: define_index
                    {
                    pushFollow(FOLLOW_define_index_in_ddl_statement363);
                    define_index();

                    state._fsp--;


                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "ddl_statement"


    // $ANTLR start "define"
    // /Users/abutcher/Documents/workspace/abutcher-p1/src/edu/wvu/mix/abutcher/CS210_V1.g:87:1: define : 'DEFINE' 'TABLE' table_name 'HAVING' 'FIELDS' '(' field_name TYPE ( COMMA field_name TYPE )* ')' ;
    public final void define() throws RecognitionException {
        try {
            // /Users/abutcher/Documents/workspace/abutcher-p1/src/edu/wvu/mix/abutcher/CS210_V1.g:88:3: ( 'DEFINE' 'TABLE' table_name 'HAVING' 'FIELDS' '(' field_name TYPE ( COMMA field_name TYPE )* ')' )
            // /Users/abutcher/Documents/workspace/abutcher-p1/src/edu/wvu/mix/abutcher/CS210_V1.g:89:3: 'DEFINE' 'TABLE' table_name 'HAVING' 'FIELDS' '(' field_name TYPE ( COMMA field_name TYPE )* ')'
            {
            match(input,33,FOLLOW_33_in_define378); 
            match(input,34,FOLLOW_34_in_define380); 
            pushFollow(FOLLOW_table_name_in_define382);
            table_name();

            state._fsp--;

            match(input,35,FOLLOW_35_in_define384); 
            match(input,36,FOLLOW_36_in_define386); 
            match(input,37,FOLLOW_37_in_define388); 
            pushFollow(FOLLOW_field_name_in_define390);
            field_name();

            state._fsp--;

            match(input,TYPE,FOLLOW_TYPE_in_define392); 
            // /Users/abutcher/Documents/workspace/abutcher-p1/src/edu/wvu/mix/abutcher/CS210_V1.g:89:69: ( COMMA field_name TYPE )*
            loop5:
            do {
                int alt5=2;
                int LA5_0 = input.LA(1);

                if ( (LA5_0==COMMA) ) {
                    alt5=1;
                }


                switch (alt5) {
            	case 1 :
            	    // /Users/abutcher/Documents/workspace/abutcher-p1/src/edu/wvu/mix/abutcher/CS210_V1.g:89:70: COMMA field_name TYPE
            	    {
            	    match(input,COMMA,FOLLOW_COMMA_in_define395); 
            	    pushFollow(FOLLOW_field_name_in_define397);
            	    field_name();

            	    state._fsp--;

            	    match(input,TYPE,FOLLOW_TYPE_in_define399); 

            	    }
            	    break;

            	default :
            	    break loop5;
                }
            } while (true);

            match(input,38,FOLLOW_38_in_define403); 

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "define"


    // $ANTLR start "rename"
    // /Users/abutcher/Documents/workspace/abutcher-p1/src/edu/wvu/mix/abutcher/CS210_V1.g:92:1: rename : 'RENAME' 'TABLE' table_name 'TO' table_name ;
    public final void rename() throws RecognitionException {
        try {
            // /Users/abutcher/Documents/workspace/abutcher-p1/src/edu/wvu/mix/abutcher/CS210_V1.g:93:3: ( 'RENAME' 'TABLE' table_name 'TO' table_name )
            // /Users/abutcher/Documents/workspace/abutcher-p1/src/edu/wvu/mix/abutcher/CS210_V1.g:94:3: 'RENAME' 'TABLE' table_name 'TO' table_name
            {
            match(input,39,FOLLOW_39_in_rename418); 
            match(input,34,FOLLOW_34_in_rename420); 
            pushFollow(FOLLOW_table_name_in_rename422);
            table_name();

            state._fsp--;

            match(input,32,FOLLOW_32_in_rename424); 
            pushFollow(FOLLOW_table_name_in_rename426);
            table_name();

            state._fsp--;


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "rename"


    // $ANTLR start "drop"
    // /Users/abutcher/Documents/workspace/abutcher-p1/src/edu/wvu/mix/abutcher/CS210_V1.g:97:1: drop : 'DROP' 'TABLE' table_name ;
    public final void drop() throws RecognitionException {
        try {
            // /Users/abutcher/Documents/workspace/abutcher-p1/src/edu/wvu/mix/abutcher/CS210_V1.g:98:3: ( 'DROP' 'TABLE' table_name )
            // /Users/abutcher/Documents/workspace/abutcher-p1/src/edu/wvu/mix/abutcher/CS210_V1.g:99:3: 'DROP' 'TABLE' table_name
            {
            match(input,40,FOLLOW_40_in_drop441); 
            match(input,34,FOLLOW_34_in_drop443); 
            pushFollow(FOLLOW_table_name_in_drop445);
            table_name();

            state._fsp--;


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "drop"


    // $ANTLR start "define_index"
    // /Users/abutcher/Documents/workspace/abutcher-p1/src/edu/wvu/mix/abutcher/CS210_V1.g:102:1: define_index : 'DEFINE' 'INDEX' 'ON' table_name '(' field_name ')' ;
    public final void define_index() throws RecognitionException {
        try {
            // /Users/abutcher/Documents/workspace/abutcher-p1/src/edu/wvu/mix/abutcher/CS210_V1.g:103:3: ( 'DEFINE' 'INDEX' 'ON' table_name '(' field_name ')' )
            // /Users/abutcher/Documents/workspace/abutcher-p1/src/edu/wvu/mix/abutcher/CS210_V1.g:104:3: 'DEFINE' 'INDEX' 'ON' table_name '(' field_name ')'
            {
            match(input,33,FOLLOW_33_in_define_index460); 
            match(input,41,FOLLOW_41_in_define_index462); 
            match(input,42,FOLLOW_42_in_define_index464); 
            pushFollow(FOLLOW_table_name_in_define_index466);
            table_name();

            state._fsp--;

            match(input,37,FOLLOW_37_in_define_index468); 
            pushFollow(FOLLOW_field_name_in_define_index470);
            field_name();

            state._fsp--;

            match(input,38,FOLLOW_38_in_define_index472); 

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "define_index"


    // $ANTLR start "dml_statement"
    // /Users/abutcher/Documents/workspace/abutcher-p1/src/edu/wvu/mix/abutcher/CS210_V1.g:109:1: dml_statement : ( delete | insert | update );
    public final void dml_statement() throws RecognitionException {
        try {
            // /Users/abutcher/Documents/workspace/abutcher-p1/src/edu/wvu/mix/abutcher/CS210_V1.g:110:3: ( delete | insert | update )
            int alt6=3;
            switch ( input.LA(1) ) {
            case 43:
                {
                alt6=1;
                }
                break;
            case 45:
                {
                alt6=2;
                }
                break;
            case 47:
                {
                alt6=3;
                }
                break;
            default:
                NoViableAltException nvae =
                    new NoViableAltException("", 6, 0, input);

                throw nvae;
            }

            switch (alt6) {
                case 1 :
                    // /Users/abutcher/Documents/workspace/abutcher-p1/src/edu/wvu/mix/abutcher/CS210_V1.g:111:3: delete
                    {
                    pushFollow(FOLLOW_delete_in_dml_statement489);
                    delete();

                    state._fsp--;


                    }
                    break;
                case 2 :
                    // /Users/abutcher/Documents/workspace/abutcher-p1/src/edu/wvu/mix/abutcher/CS210_V1.g:112:5: insert
                    {
                    pushFollow(FOLLOW_insert_in_dml_statement495);
                    insert();

                    state._fsp--;


                    }
                    break;
                case 3 :
                    // /Users/abutcher/Documents/workspace/abutcher-p1/src/edu/wvu/mix/abutcher/CS210_V1.g:113:5: update
                    {
                    pushFollow(FOLLOW_update_in_dml_statement501);
                    update();

                    state._fsp--;


                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "dml_statement"


    // $ANTLR start "delete"
    // /Users/abutcher/Documents/workspace/abutcher-p1/src/edu/wvu/mix/abutcher/CS210_V1.g:116:1: delete : 'DELETE' table_name ( 'WHERE' expression )? ;
    public final void delete() throws RecognitionException {
        try {
            // /Users/abutcher/Documents/workspace/abutcher-p1/src/edu/wvu/mix/abutcher/CS210_V1.g:117:3: ( 'DELETE' table_name ( 'WHERE' expression )? )
            // /Users/abutcher/Documents/workspace/abutcher-p1/src/edu/wvu/mix/abutcher/CS210_V1.g:118:3: 'DELETE' table_name ( 'WHERE' expression )?
            {
            match(input,43,FOLLOW_43_in_delete516); 
            pushFollow(FOLLOW_table_name_in_delete518);
            table_name();

            state._fsp--;

            // /Users/abutcher/Documents/workspace/abutcher-p1/src/edu/wvu/mix/abutcher/CS210_V1.g:118:23: ( 'WHERE' expression )?
            int alt7=2;
            int LA7_0 = input.LA(1);

            if ( (LA7_0==44) ) {
                alt7=1;
            }
            switch (alt7) {
                case 1 :
                    // /Users/abutcher/Documents/workspace/abutcher-p1/src/edu/wvu/mix/abutcher/CS210_V1.g:118:24: 'WHERE' expression
                    {
                    match(input,44,FOLLOW_44_in_delete521); 
                    pushFollow(FOLLOW_expression_in_delete523);
                    expression();

                    state._fsp--;


                    }
                    break;

            }


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "delete"

